# fantasy_predictor

./: app.py  main.py  pipeline.py  prompt.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
tools/: fpl_loader.py  models.py  team_fixtures.py
